# UnityInspectorStandalone

./: .gitignore  CMakeLists.txt  README.md  UnityInspector.sln  build_release.bat
.github/workflows/: build.yml  debug-check.yml  msbuild.yml
UnityInspector/: CMakeLists.txt  UnityInspector.filters  UnityInspector.vcxproj
UnityInspector/src/: CMakeLists.txt  dllmain.cpp
UnityInspector/src/config/: config.h
UnityInspector/src/core/: core.cpp  core.h
UnityInspector/src/features/: features.cpp  features.h
UnityInspector/src/features/assembly_explorer/: assembly_explorer.cpp  assembly_explorer.h
UnityInspector/src/features/debug_console/: debug_console.cpp  debug_console.h
UnityInspector/src/features/inspector/: editable_type.h  field_editor.cpp  field_editor.h  hierarchy_window.cpp  inspector.cpp  inspector.h  inspector_esp.cpp  inspector_window.cpp  invoke_popup.cpp  utils.cpp
UnityInspector/src/features/lua_system/: lua_bindings.cpp  lua_plugin.cpp  lua_plugin.h  lua_system.cpp  lua_system.h
UnityInspector/src/features/memory_scanner/: memory_scanner.cpp  memory_scanner.h
UnityInspector/src/features/tests/: Tests.cpp  Tests.h
UnityInspector/src/game/config/: config.h
UnityInspector/src/game/core/: core.cpp  core.h
UnityInspector/src/game/features/Tests/: Tests.cpp  Tests.h
UnityInspector/src/game/features/assembly_explorer/: assembly_explorer.cpp  assembly_explorer.h
UnityInspector/src/game/features/debug_console/: debug_console.cpp  debug_console.h
UnityInspector/src/game/features/inspector/: assembly_explorer.cpp  assembly_explorer.h  esp.cpp  field_editor.cpp  field_editor.h  hierarchy_window.cpp  inspector.cpp  inspector.h  inspector_esp.cpp  inspector_window.cpp  invoke_popup.cpp  ui.cpp  utils.cpp
UnityInspector/src/game/helper/: helper.cpp  helper.h
UnityInspector/src/game/hooks/: hooks.cpp  hooks.h
UnityInspector/src/game/sdk/: sdk.h
UnityInspector/src/gui/menu/: menu.cpp  menu.h
UnityInspector/src/gui/menu/debug_tab/: debug_tab.cpp  debug_tab.h
UnityInspector/src/gui/menu/info_tab/: info_tab.cpp  info_tab.h
UnityInspector/src/gui/window/: external_overlay.cpp  external_overlay.h  input_forwarder.cpp  input_forwarder.h  window.cpp  window.h  window_finder.cpp  window_finder.h
UnityInspector/src/helper/: helper.cpp  helper.h
UnityInspector/src/hooks/: hooks.cpp  hooks.h
UnityInspector/src/hooks/console_hooks/: console_hooks.cpp  console_hooks.h
UnityInspector/src/hooks/quit_hooks/: quit_hooks.cpp  quit_hooks.h
UnityInspector/src/hooks/steam_hooks/: steam_hooks.cpp  steam_hooks.h
UnityInspector/src/loader/: loader.cpp  loader.h
UnityInspector/src/menu/: menu.cpp  menu.h
UnityInspector/src/menu/debug_tab/: debug_tab.cpp  debug_tab.h
UnityInspector/src/menu/info_tab/: info_tab.cpp  info_tab.h
UnityInspector/src/menu/lua_tab/: lua_tab.cpp
UnityInspector/src/menu/misc_tab/: misc_tab.cpp  misc_tab.h
UnityInspector/src/pch/: pch.h  proxy.h
UnityInspector/src/window/: external_overlay.cpp  external_overlay.h  input.cpp  input.h  input_forwarder.cpp  input_forwarder.h  themes.h  window.cpp  window.h  window_finder.cpp  window_finder.h
plugins/: unity_inspector_api.lua
